k8s/helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: harbor
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - harbor.bohyeon.com
    - notary.bohyeon.com
    secretName: harbor-tls
  rules:
  - host: harbor.bohyeon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harbor
            port:
              number: 80
  - host: notary.bohyeon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notary
            port:
              number: 80
